# captain-git-hook

./: .capn  .gitignore  .travis.yml  Cargo.toml  readme.org
.circleci/: config.yml
github/: Dockerfile  create-github-pre-receive-environment.sh  readme.org
src/: config.rs  error.rs  fingerprints.rs  fs.rs  git.rs  gpg.rs  keyring.rs  lib.rs  logger.rs  main.rs  policies.rs  pretty.rs  reference_update.rs
src/policies/: policy_result.rs  reference_update.rs
tests/: gpg_test.rs  policies_test.rs  test-public-key.asc  test-secret-key.asc
tests/test-repo.git/: packed-refs
tests/test-repo.git/info/: refs
tests/test-repo.git/objects/info/: commit-graph  packs
tests/test-repo.git/objects/pack/: pack-0825d9172e4a102ea63686069af558b081b33586.idx  pack-0825d9172e4a102ea63686069af558b081b33586.pack  pack-13e5273a47886eafc70afbe817b3da1f2c1e670a.bitmap  pack-13e5273a47886eafc70afbe817b3da1f2c1e670a.idx  pack-13e5273a47886eafc70afbe817b3da1f2c1e670a.pack  pack-262e9ba88f257e177450d7df9473d23227fb8290.idx  pack-262e9ba88f257e177450d7df9473d23227fb8290.pack  pack-339acc501c1698e1f4b6d7d38638a4805bdab49c.idx  pack-339acc501c1698e1f4b6d7d38638a4805bdab49c.pack  pack-3f592c46ef0b3e7f72e82704b7e675e449d4d343.idx  pack-3f592c46ef0b3e7f72e82704b7e675e449d4d343.pack  pack-711a73251eee03a9d694b646c491ce46eec7c115.bitmap  pack-711a73251eee03a9d694b646c491ce46eec7c115.idx  pack-711a73251eee03a9d694b646c491ce46eec7c115.pack  pack-8342d966cf1b1479d2874756db963072af59ef51.idx  pack-8342d966cf1b1479d2874756db963072af59ef51.pack  pack-9555b08a13142095d06c21a03e799895c34ca04e.idx  (+14 more)
(+4 files in other folders)
