[package]
name = "capn"
version = "0.2.0"
authors = ["Justin Worthe <justin@jemstep.com>"]
edition = "2018"

[dependencies]
git2 = { version = "0.8.0", default-features = false }
structopt = "0.2.14"
serde = { version = "1.0.89", features = ["derive"] }
toml = "0.4.2"
log = { version = "0.4.7", features = ["std"] }
chrono = "0.4.7"
rayon = "1.0.3"
