[package]
name = "capn"
version = "0.5.0"
authors = ["Justin Wernick <justin@jemstep.com>"]
edition = "2018"

[dependencies]
git2 = { version = "0.8.0", default-features = false }
structopt = "0.3.5"
serde = { version = "1.0.89", features = ["derive"] }
toml = "0.5.5"
serde_json = "1.0.40"
log = { version = "0.4.8", features = ["std", "serde"] }
chrono = "0.4.7"
rayon = "1.0.3"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"